--- a/config/mpd/mpd.conf
+++ b/config/mpd/mpd.conf
@@ -1,11 +1,11 @@
 # Files and directories #######################################################
 music_directory                   "/data/music"
 playlist_directory                "/data/playlists"
-db_file                           "/data/mpd/database/tag_cache"
+state_file                        "/data/mpd/state"
 log_file                          "/data/mpd/mpd.log"
 pid_file                          "/data/mpd/mpd.pid"
-state_file                        "/data/mpd/database/state"
-sticker_file                      "/data/mpd/database/sticker.sql"
+db_file                           "/data/mpd/tag_cache"
+sticker_file                      "/data/mpd/sticker.sql"
 user                              "mpd"
 bind_to_address                   "0.0.0.0"
 port                              "6600"
