🗃️ Committing everything that changed 🗃️

--- a/config/navidrome/navidrome.toml
+++ b/config/navidrome/navidrome.toml
@@ -2,9 +2,9 @@ MusicFolder = "/data/music"
 PlaylistsPath = "/data/playlists:**/**"
 DataFolder = "/data/navidrome"
 ScanSchedule = "@every 360m"
-BaseUrl = "/"
-Address = "127.0.0.1"
-Port = 4533
+BaseUrl = ""
+Address = "0.0.0.0"
+Port = 80
 EnableTranscodingConfig = true
 TranscodingCacheSize = "500MB"
 ImageCacheSize = "100MB"
