🗃️ Committing everything that changed 🗃️

--- a/config/mpd/mpd.conf
+++ b/config/mpd/mpd.conf
@@ -27,4 +27,20 @@ id3v1_encoding                    "UTF-8"
 input {
         plugin                    "curl"
 }
+# Output #######################################################################
+audio_output {
+	type		    "httpd"
+	name		    "stream"
+	port		    "8000"
+	bitrate		    "128000"
+	format		    "48000:16:1"
+	always_on           "yes"
+	tags                "yes"
+        max_clients         "0" 
+}
+audio_output {
+    type                    "null"
+    name                    "This server does not need to play music, but it can"
+}
+
 ###############################################################################
