--- a/config/navidrome/navidrome.toml
+++ b/config/navidrome/navidrome.toml
@@ -10,7 +10,7 @@ TranscodingCacheSize = "500MB"
 ImageCacheSize = "100MB"
 AutoImportPlaylists = true
 UILoginBackgroundUrl = "https://source.unsplash.com/random/1600x900?music"
-UIWelcomeMessage = ""
+UIWelcomeMessage = "Welcome to CasjaysDev music server"
 EnableCoverAnimation = true
 RecentlyAddedByModTime = false
 CoverArtPriority = "embedded, cover.*, folder.*, front.*"
@@ -39,3 +39,4 @@ Extractor = "taglib"
 
 # [ListenBrainz]
 Enabled = true
+
