🗃️ Committing everything that changed 🗃️

--- a/config/mpd/mpd.conf
+++ b/config/mpd/mpd.conf
@@ -10,7 +10,6 @@ user                              "mpd"
 bind_to_address                   "0.0.0.0"
 port                              "6600"
 log_level                         "default"
-gapless_mp3_playback              "yes"
 restore_paused                    "no"
 save_absolute_paths_in_playlists  "yes"
 metadata_to_use                   "artist,album,title,track,name,genre,date,composer,performer,disc"
@@ -22,25 +21,25 @@ zeroconf_enabled                  "no"
 zeroconf_name                     "mpd server"
 # Character Encoding ##########################################################
 filesystem_charset                "UTF-8"
-id3v1_encoding                    "UTF-8"
-# Input #######################################################################
-input {
-        plugin                    "curl"
-}
 # Output #######################################################################
 audio_output {
-	type		    "httpd"
-	name		    "stream"
-	port		    "8000"
-	bitrate		    "128000"
-	format		    "48000:16:1"
-	always_on           "yes"
-	tags                "yes"
-        max_clients         "0" 
+        type                "httpd"
+        name                "stream"
+        encoder             "lame" 
+        port                "8000"
+        bind_to_address     "0.0.0.0"
+        bitrate             "128000"
+        format              "48000:16:1"
+        always_on           "yes"
+        tags                "yes"
+        max_clients         "0"
 }
 audio_output {
     type                    "null"
     name                    "This server does not need to play music, but it can"
 }
-
+# Input #######################################################################
+input {
+        plugin                    "curl"
+}
 ###############################################################################
