🗃️ Committing everything that changed 🗃️

--- a/config/mpd/mpd.conf
+++ b/config/mpd/mpd.conf
@@ -23,20 +23,19 @@ zeroconf_name                     "mpd server"
 filesystem_charset                "UTF-8"
 # Output #######################################################################
 audio_output {
-        type                "httpd"
-        name                "stream"
-        encoder             "lame" 
-        port                "8000"
-        bind_to_address     "0.0.0.0"
-        bitrate             "128000"
-        format              "48000:16:1"
-        always_on           "yes"
-        tags                "yes"
-        max_clients         "0"
-}
-audio_output {
     type                    "null"
     name                    "This server does not need to play music, but it can"
+}
+audio_output {
+  type                      "httpd"
+  name                      "stream"
+  encoder                   "lame"
+  port                      "8000"
+  bitrate                   "128"     
+  max_clients               "0"    
+  mixer_type                "software"
+  format                    "44100:16:2"
+  always_on                 "yes"
 }
 # Input #######################################################################
 input {
