🗃️ Committing everything that changed 🗃️

--- a/config/mpd/mpd.conf
+++ b/config/mpd/mpd.conf
@@ -1,10 +1,10 @@
 # Files and directories #######################################################
 music_directory                   "/data/music"
 playlist_directory                "/data/playlists"
-state_file                        "/data/mpd/state"
+state_file                        "/data/mpd/state.txt"
 log_file                          "/data/mpd/mpd.log"
 pid_file                          "/data/mpd/mpd.pid"
-db_file                           "/data/mpd/tag_cache"
+db_file                           "/data/mpd/tag_cache.db"
 sticker_file                      "/data/mpd/sticker.sql"
 user                              "mpd"
 bind_to_address                   "0.0.0.0"
