🗃️ Committing everything that changed 🗃️

--- a/config/mpd/mpd.conf
+++ b/config/mpd/mpd.conf
@@ -1,10 +1,10 @@
 # Files and directories #######################################################
 music_directory                   "/data/music"
 playlist_directory                "/data/playlists"
-state_file                        "/data/mpd/state.txt"
 log_file                          "/data/mpd/mpd.log"
 pid_file                          "/data/mpd/mpd.pid"
-db_file                           "/data/mpd/tag_cache.db"
+db_file                           "/data/mpd/cache.db"
+state_file                        "/data/mpd/state.txt"
 sticker_file                      "/data/mpd/sticker.sql"
 user                              "mpd"
 bind_to_address                   "0.0.0.0"
@@ -23,22 +23,21 @@ zeroconf_name                     "mpd server"
 filesystem_charset                "UTF-8"
 # Output #######################################################################
 audio_output {
-    type                    "null"
-    name                    "This server does not need to play music, but it can"
+    type                          "null"
+    name                          "This server does not need to play music, but it can"
 }
 audio_output {
-  type                      "httpd"
-  name                      "stream"
-  encoder                   "lame"
-  port                      "8000"
-  bitrate                   "128"     
-  max_clients               "0"    
-  mixer_type                "software"
-  format                    "44100:16:2"
-  always_on                 "yes"
+  type                            "httpd"
+  name                            "stream"
+  encoder                         "lame"
+  port                            "8000"
+  bitrate                         "128"     
+  max_clients                     "0"    
+  mixer_type                      "software"
+  format                          "44100:16:2"
 }
 # Input #######################################################################
 input {
-        plugin                    "curl"
+  plugin                          "curl"
 }
 ###############################################################################
