🗃️ Committing everything that changed 🗃️

--- a/config/mpd/mpd.conf
+++ b/config/mpd/mpd.conf
@@ -6,7 +6,7 @@ pid_file                          "/data/mpd/mpd.pid"
 db_file                           "/data/mpd/cache.db"
 state_file                        "/data/mpd/state.txt"
 sticker_file                      "/data/mpd/sticker.sql"
-user                              "mpd"
+user                              "root"
 bind_to_address                   "0.0.0.0"
 port                              "6600"
 log_level                         "default"
