--- a/config/mpd/mpd.conf
+++ b/config/mpd/mpd.conf
@@ -24,7 +24,7 @@ filesystem_charset                "UTF-8"
 # Output #######################################################################
 audio_output {
     type                          "null"
-    name                          "This server does not need to play music, but it can"
+    name                          "This server does not need to play navidrome, but it can"
 }
 audio_output {
   type                            "httpd"
